tried fixing scrolling bug on mobile

--- a/components/fixedBackground.module.css
+++ b/components/fixedBackground.module.css
@@ -1,5 +1,4 @@
 .specialScroll {
-  margin-top: 100px;
   background-size: cover;
   background-attachment: scroll;
   background-image: url("../public/images/montrealNight2.jpg");
@@ -14,16 +13,7 @@
   flex-wrap: wrap;
   position: relative;
 }
-.fixed {
-  background-size: cover;
-  background-attachment: fixed;
-  background-image: url("../public/images/montrealNight2.jpg");
-  max-height: 700px;
-  min-height: 700px;
-  min-width: 100%;
-}
 @media (max-width: 800px) {
   .specialScroll {
-    margin-top: 75px;
   }
 }
